--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.2/lazysizes.min.js" async></script>
 </head>
 <title>Home</Title>
 <body>
@@ -67,7 +68,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 		<div class="col p-2 bg-light text-dark text-center"><h1 class="display-4">Projects</h1>
 		<div class="card-group my-auto mx-auto" style="width:97.5%;">
 			<div class="card">
-				<img class="card-img-top" src="Images\VisualSort.jpg" alt="Card image cap">
+				<img class="card-img-top lazyload" data-src="Images\VisualSort.jpg" alt="Card image cap">
 				<div class="card-body text-left small">
 					<h4 class="card-title">Sorting Visualiser</h4>
 					<p class="card-text">This webpage visualises different sorting algorithms and makes it easy to understand the efficiencies of them in different environments.</p>
@@ -75,7 +76,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 				</div>
 			</div>
 			<div class="card">
-				<img class="card-img-top" src="Images\Dashboard.jpg" alt="Card image cap">
+				<img class="card-img-top lazyload" data-src="Images\Dashboard.jpg" alt="Card image cap">
 				<div class="card-body text-left small">
 					<h4 class="card-title">Dashboard</h4>
 					<p class="card-text">This webpage consists of graphs and tables to show data, which can be edited and is saved locally on your device.</p>
