--- a/VisualSort.html
+++ b/VisualSort.html
@@ -67,6 +67,7 @@ p {
 </style>
 <!-- BootStrap code from copied/modified from BootStrap documentation -->
 <meta charset="utf-8">
+<meta name="google-site-verification" content="57ojS5ZUvzfapLNXZ3loOraMw3dSHtMuVi8pMCyi410" /> <!-- Google Search Console -->
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.5/dist/bootstrap-table.min.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
