--- a/dashboard.html
+++ b/dashboard.html
@@ -229,7 +229,7 @@ if (!localStorage.getItem('SubjectData')) {
   // Venue Label
   let VenueLabels = [];
   VenueLabels.push("Classrooms", "Labs", "Offices");
-  localStorage.setItem("ItemLabels", JSON.stringify(VenueLabels));
+  localStorage.setItem("VenueLabels", JSON.stringify(VenueLabels));
   // Store Venue
   value = [100, 20, 60];
   localStorage.setItem("Venue", JSON.stringify(value));
