--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 		<div class="col p-2 bg-light text-dark text-center"><h1 class="display-4">Projects</h1>
 		<div class="card-group my-auto mx-auto" style="width:97.5%;">
 			<div class="card">
-				<img class="card-img-top lazyload" data-src="Images\VisualSort.jpg" alt="Card image cap">
+				<img class="card-img-top lazyload" data-src="Images\VisualSort.jpg" srcset="Images\VisualSortSmall.jpg 477w, Images\VisualSort.jpg 1024w" sizes="50vw" alt="Card image cap">
 				<div class="card-body text-left small">
 					<h4 class="card-title">Sorting Visualiser</h4>
 					<p class="card-text">This webpage visualises different sorting algorithms and makes it easy to understand the efficiencies of them in different environments.</p>
@@ -71,7 +71,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 				</div>
 			</div>
 			<div class="card">
-				<img class="card-img-top lazyload" data-src="Images\Dashboard.jpg" alt="Card image cap">
+				<img class="card-img-top lazyload" data-src="Images\Dashboard.jpg" srcset="Images\DashboardSmall.jpg 480w, Images\Dashboard.jpg 1024w" sizes="50vw" alt="Card image cap">
 				<div class="card-body text-left small">
 					<h4 class="card-title">Dashboard</h4>
 					<p class="card-text">This webpage consists of graphs and tables to show data, which can be edited and is saved locally on your device.</p>
