--- a/VisualSort.html
+++ b/VisualSort.html
@@ -69,17 +69,15 @@ p {
 <meta charset="utf-8">
 <meta name="google-site-verification" content="57ojS5ZUvzfapLNXZ3loOraMw3dSHtMuVi8pMCyi410" /> <!-- Google Search Console -->
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.5/dist/bootstrap-table.min.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+<link rel="stylesheet preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
 integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
 integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
 integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 </head>
 <title>Sorting Visualiser</Title>
 <body>
@@ -268,7 +266,7 @@ async function bubbleSort(){
     }
 } 
 
-async function selectionSort(){ // Done
+async function selectionSort(){
 	var minIdx, temp, len = height.length;
 	for(var i = 0; i < len; i++){
 		minIdx = i;
@@ -322,7 +320,6 @@ async function insertionSort(height){
 }
 
 async function mergeSort(height) { // Bottom Up Merge sort
-	console.log(height);
 	var sorted = height.slice(),
 		n = sorted.length,
 		buffer = new Array(n);
